<resources>
    <string name="app_name">Mis Tareas MGC</string>
    <string name="mis_tareas">Tareas</string>
    <string name="imagen">imagen</string>
    <string name="mgc">MGC</string>
    <string name="hint">hint</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="item">Item</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="salir">Salir</string>
    <string name="realizada"></string>
    <string name="ver_historial">Ver historial</string>
    <string name="mis">Mis</string>
    <string name="textview">TextView</string>

</resources>
