<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/fondo_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imagen"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/fondo1" />

    <TextView
        android:id="@+id/label1"
        style="@style/labels"
        android:layout_marginTop="20dp"
        android:text="@string/mis_tareas"
        android:textColor="@color/gris"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/label2"
        style="@style/labels"
        android:layout_below="@+id/label1"
        android:layout_marginTop="10dp"
        android:text="@string/mgc"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorAccent_alfa"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/editText"
            style="@style/edit_texts"
            android:hint="@string/usuario"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:targetApi="o">
            <requestFocus />

        </EditText>

        <EditText
            android:id="@+id/editText2"
            style="@style/edit_texts"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:targetApi="o" />

    </LinearLayout>

    <Button
        android:id="@+id/boton_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/boton"
        android:text="@string/login"
        android:textColor="@color/colorAmarilloClarito"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="login"/>

    <TextView
        android:id="@+id/crear_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/boton_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/crear_cuenta"
        android:textColor="@color/colorAmarilloClarito"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="crearCuenta"/>

    <ImageView
        android:id="@+id/usuario"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/candado"
        android:layout_marginStart="0dp"
        android:layout_marginTop="194dp"
        android:contentDescription="@string/imagen"
        app:srcCompat="@mipmap/usuario" />

    <ImageView
        android:id="@+id/candado"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_below="@+id/usuario"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imagen"
        app:srcCompat="@mipmap/candado" />

</RelativeLayout>